final_loadmore_searchajax

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -59,7 +59,10 @@ ul.no-marker {
 .content.loading {
     position: relative;
 }
-
+.content {
+    position: relative;
+    min-height: 100vh; /* Chiếm toàn bộ chiều cao màn hình */
+}
 .content.loading::before {
     content: "";
     position: absolute;
