--- a/public/css/index.css
+++ b/public/css/index.css
@@ -101,6 +101,12 @@ h5.badge {
     padding: 5px !important;
     font-size: 14px !important;
 }
+.pd-5 button {
+    padding: 5px;
+}
+.width_unset {
+    width: unset !important;
+}
 @keyframes spin {
     from {
         transform: rotate(0deg);
